--- a/额外css.css
+++ b/额外css.css
@@ -343,6 +343,12 @@ a.post-quote:active:before {
 		padding: 75px 0;
 	}
 
+	/* 全宽相册页面模板 */
+	.full-width-gallery .wrapper-inner {
+		width: 80%;
+		max-width: 1000px;
+	}
+
 }
 
 @media (max-width: 1200px) {	
@@ -494,11 +500,13 @@ a.post-quote:active:before {
 		position: fixed;	
 		top: 0;
 		z-index: 99999;
+
 		-webkit-transform: translate3d(0);
 		-moz-transform: translate3d(0);
 		-ms-transform: translate3d(0);
 		-o-transform: translate3d(0);
 		transform: translate3d(0);
+		
 		-webkit-transition: transform 0.5s ease-out;
 		-moz-transition: transform 0.5s ease-out;
 		-o-transition: transform 0.5s ease-out;
