--- a/额外css.css
+++ b/额外css.css
@@ -255,8 +255,12 @@ a.post-quote:active:before {
 .post-content table { border: 1px solid #ddd; }
 
 /* 留言页 */
-.post-18{
-	margin-bottom: 100px;
+.post-18{ margin-bottom: 100px; }
+
+/* 页标题 */
+.page-title {
+	border-bottom: 1px solid #eee;
+	margin-bottom: 0px;
 }
 
 
@@ -328,7 +332,7 @@ a.post-quote:active:before {
 	.post-content pre { margin-bottom: 25.2px; }
 
 	/* “页码”边距 */
-	.page-title { margin-bottom: 30px; }
+	.page-title { padding-bottom: 40px; }
 	.page-title h4 { padding-top: 50px; }
 
 	/* 评论区边距 */
@@ -381,7 +385,7 @@ a.post-quote:active:before {
 	.post-inner { padding: 50px 0; }				/* 文章容器内边距 */
 	.posts .post,									/* 各文章间距 */
 	.posts .page { margin-bottom: 0; }
-	.page-title { margin-bottom: 30px; }			/* “页码”边距 */
+	.page-title { padding-bottom: 40px; }			/* “页码”边距 */
 	.page-title h4 { padding-top: 50px; }
 	.blog-title { text-align: left; }				/* 侧边栏内各元素边距 */
 	.blog-title:after { width: 95%; }
@@ -414,12 +418,10 @@ a.post-quote:active:before {
 @media (max-width: 1100px) {
 
 	body{ padding-left: 320px; }
-
 	.sidebar {
 		width: 320px;
 		padding: 80px 40px;
 	}
-
 	.wrapper-inner {
 		width: 100%;
 		max-width: 560px;
@@ -434,7 +436,6 @@ a.post-quote:active:before {
 	body{
 		padding-left: 300px;
 	}
-
 	.sidebar {
 		width: 300px;
 		padding: 80px 40px;
@@ -484,10 +485,9 @@ a.post-quote:active:before {
 	}
 
 	/* “页码”边距 */
-	.page-title { margin-bottom: 0px; }
+	.page-title { margin-bottom: 0px; padding-bottom: 0px; }
 	.page-title h4 {
 		padding-top: 70px;
-		border-bottom: 1px solid #eee;
 		padding-bottom: 70px
 	}
 	
