--- a/额外css.css
+++ b/额外css.css
@@ -263,6 +263,33 @@ a.post-quote:active:before {
 	margin-bottom: 0px;
 }
 
+/* 添加文章目录 */
+#article-index {
+	margin: 40px 0 40px;
+	border-left: 1.5px solid #ccc;
+}
+#article-index > strong{
+	margin-left: 19px;
+	color: #888;
+}
+#index-ul { margin: 0; }
+#index-ul > li:nth-child(1){ margin-top: 5px; }
+#index-ul > li{
+	margin: 0 0 5px 20px;
+	list-style-type: none;
+}
+#index-ul > li > a{
+	color: #888;
+	border-bottom: none;
+}
+#index-ul > li > a:hover{
+	color: #555;
+	border-bottom: none;
+	transition-property: color;
+	transition-duration: 0.2s;
+	transition-timing-function: ease-out;
+}
+
 
 
 
@@ -434,10 +461,10 @@ a.post-quote:active:before {
 @media (max-width: 1000px) {
 
 	body{
-		padding-left: 300px;
+		padding-left: 280px;
 	}
 	.sidebar {
-		width: 300px;
+		width: 280px;
 		padding: 80px 40px;
 	}
 
@@ -528,7 +555,7 @@ a.post-quote:active:before {
 		padding: 0 7.5% 0 7.5%;			/* 需要与post-inner宽度平齐的元素 */
 		position: absolute;
 			top: 85px;
-			bottom: calc(100% - 387px);	/* 拿尺子搁屏幕上量的... */
+			bottom: calc(100% - 350px);	/* 拿尺子搁屏幕上量的... */
 			left: 0;
 			right: 0;
 		z-index: 10000;
@@ -587,10 +614,13 @@ a.post-quote:active:before {
 	.post-content a.more-link { font-size: 1.0rem; }
 	.comment-form input[type="submit"] { padding: 12px 14px; }
 	.post-quote { padding-left: 47px; }
-	.post-quote:before { top: 30px; font-size: 4em; }
+	.post-quote:before {
+		top: 30px;
+		font-size: 4em;
+	}
 	.mobile-menu {
 		top: 63px;
-		bottom: calc(100% - 337px);
+		bottom: calc(100% - 300px);
 	}
 
 	/* 评论区边距 */
