--- a/额外css.css
+++ b/额外css.css
@@ -380,7 +380,7 @@ a.post-quote:active:before {
 
 	/* 全宽相册页面模板 */
 	.full-width-gallery .wrapper-inner {
-		width: 80%;
+		width: 75%;
 		max-width: 1000px;
 	}
 
@@ -442,6 +442,15 @@ a.post-quote:active:before {
 
 }
 
+
+@media (max-width: 1150px) {
+
+	body{ padding-left: 330px; }
+	.sidebar { width: 330px; }
+
+}
+
+
 @media (max-width: 1100px) {
 
 	body{ padding-left: 320px; }
@@ -458,20 +467,23 @@ a.post-quote:active:before {
 }
 
 
-@media (max-width: 1000px) {
+@media (max-width: 1070px) {
 
-	body{
-		padding-left: 280px;
-	}
-	.sidebar {
-		width: 280px;
-		padding: 80px 40px;
-	}
+	body{ padding-left: 310px; }
+	.sidebar { width: 310px; }
 
 }
 
 
-@media (max-width: 930px) {
+@media (max-width: 1040px) {
+
+	body{ padding-left: 300px; }
+	.sidebar { width: 300px; }
+
+}
+
+
+@media (max-width: 1000px) {
 	
 	/* 移动设备侧边栏改为顶部导航 */
 	body{ padding-left: 0px; }
