新文章模板间距调整

--- a/额外css.css
+++ b/额外css.css
@@ -337,6 +337,7 @@ a.post-quote:active:before {
 	/* 文章容器内边距，与wrapper外边距相加后
 	和sidebar内元素等高，这样对称（强迫症没救了) */
 	.post-inner { padding: 50px 0; }
+	.post-status-inner { padding: 60px 0; }
 
 	/* 侧边栏内各元素 */
 	.blog-title { text-align: left; }
@@ -350,6 +351,7 @@ a.post-quote:active:before {
 	/* 微调段落间距 */
 	/* 利用了css里的兄弟类选择器，以区别对待文章内和文章外的特色图片 */
 	.post-header { margin-bottom: 30px; }
+	.post-status-header { margin-bottom: 15px; }
 	.featured-media img { margin: 80px auto 0; }
 	.post-header + .featured-media img { margin-top: 0px; }
 	.featured-media + .post-content { margin-top: 30px; }
@@ -410,6 +412,7 @@ a.post-quote:active:before {
 	/* 之后部分简单复制粘贴 min-width: 1200px */
 	.wrapper { margin: 30px 0 0 0; }				/* 页面容器外边距 */
 	.post-inner { padding: 50px 0; }				/* 文章容器内边距 */
+	.post-status-inner { padding: 60px 0; }
 	.posts .post,									/* 各文章间距 */
 	.posts .page { margin-bottom: 0; }
 	.page-title { padding-bottom: 40px; }			/* “页码”边距 */
@@ -418,6 +421,7 @@ a.post-quote:active:before {
 	.blog-title:after { width: 95%; }
 	.main-menu li { text-align: left; }
 	.post-header { margin-bottom: 30px; }			/* 微调段落间距 */
+	.post-status-header { margin-bottom: 15px; }
 	.featured-media img { margin: 80px auto 0; }
 	.post-header + .featured-media img { margin-top: 0px; }
 	.featured-media + .post-content { margin-top: 30px; }
@@ -506,6 +510,8 @@ a.post-quote:active:before {
 		max-width: 100%;
 		margin: 0 auto;
 	}
+	.post-status-date { font-size: 1.1em; }
+	.post-status-inner,
 	.post-inner {
 		width: auto;
 		max-width: 85%;
@@ -600,6 +606,12 @@ a.post-quote:active:before {
 		padding: 40px 0;
 		margin: 0 auto;
 	}
+	.post-status-inner{
+		width: auto;
+		max-width: 90%;
+		padding: 45px 0;
+		margin: 0 auto;
+	}
 
 	/* 需要与post-inner宽度平齐的元素 */
 	.mobile-menu { padding: 0 5% 0 5%; }
@@ -657,6 +669,7 @@ a.post-quote:active:before {
 	.post-content table,
 	.post-content pre { margin-bottom: 22.4px; }
 	.post-header { margin-bottom: 25px; }
+	.post-status-header { margin-bottom: 10px; }
 	.featured-media + .post-content { margin-top: 25px; }
 	.post-quote { padding-left: 45px; }
 	.post-quote:before { top: 31px; }
@@ -691,6 +704,7 @@ a.post-quote:active:before {
 	.post-content li,
 	.post-content .wp-caption { margin-bottom: 1.2em; }
 	.post-header { margin-bottom: 20px; }
+	.post-status-header { margin-bottom: 10px; }
 	.featured-media + .post-content { margin-top: 20px; }
 	.post-content a.more-link { margin-top: 1px; }
 	#posts .post:first-child > .post-inner{ padding-top: 38px; }
