--- a/额外css.css
+++ b/额外css.css
@@ -3,7 +3,7 @@
 --------------------------------------------------------------------------------------------- */
 
 .post-content {
-	font-family: 'Crimson Text', 'Times New Roman', 'Noto Serif', "Microsoft YaHei New", "Microsoft Yahei", "微软雅黑", STXihei, "华文细黑", sans-serif;
+	font-family: 'Helvetica', "Microsoft Yahei", "微软雅黑", sans-serif;
 	font-size: 1.0em;
 	line-height: 170%;
 }
@@ -707,7 +707,7 @@ a.post-quote:active:before {
 	.post-status-header { margin-bottom: 10px; }
 	.featured-media + .post-content { margin-top: 20px; }
 	.post-content a.more-link { margin-top: 1px; }
-	#posts .post:first-child > .post-inner{ padding-top: 38px; }
+	#posts .post:first-child > .post-inner{ padding-top: 40px; }
 	.post-quote { padding-left: 40px; }
 	.post-quote:before {
 		top: 29px;
