--- a/额外css.css
+++ b/额外css.css
@@ -564,17 +564,6 @@ a.post-quote:active:before {
 		-o-transition: transform 0.5s ease-out;
 		transition: transform 0.5s ease-out;
 	}
-	.sidebar:after {
-		content: '';
-		display: block;
-		height: 2px;
-		background: #282828;
-		position: absolute;
-		z-index: 100000;
-		right: 0;
-		bottom: 0;
-		left: 0; 
-	}
 	.sidebar.is-hidden {
 		-webkit-transform: translate3d(0,-100%,0);
 		-moz-transform: translate3d(0,-100%,0);
@@ -593,6 +582,16 @@ a.post-quote:active:before {
 			left: 0;
 			right: 0;
 		z-index: 10000;
+	}
+	.mobile-menu:before { 
+		content: '';
+		display: block;
+		height: 2px;
+		background: #282828;
+		position: absolute;
+		z-index: 100000;
+		right: 0;
+		left: 0; 
 	}
 
 }
