--- a/额外css.css
+++ b/额外css.css
@@ -3,13 +3,12 @@
 --------------------------------------------------------------------------------------------- */
 
 .post-content {
-	font-family: 'Helvetica', "Microsoft Yahei", "微软雅黑", sans-serif;
+	font-family: sans-serif;
 	font-size: 1.0em;
 	line-height: 170%;
 }
 
 .post-content pre { max-height: 600px; }
-.post-content p,
 .post-content blockquote,
 .post-content ul,
 .post-content ol,
@@ -168,7 +167,7 @@
 	content: '”';
 	display: block;
 	width: auto;
-	font-family: serif;
+	font-family: sans-serif;
 	font-style: normal;
 	font-size: 4.5em;
 	line-height: 72px;
@@ -177,7 +176,7 @@
 	text-align: center;
 	-webkit-font-smoothing: antialiased;
 	position: absolute;
-	top: 44px;
+	top: 50px;
 	left: 0px;
 	-webkit-transform: translateZ(0);
 	transform: translateZ(0);
@@ -193,19 +192,20 @@ a.post-quote:hover {
 	background: #fff; 
 	color: #121212;
 }
-
 a.post-quote:hover:before,
 a.post-quote:focus:before,
 a.post-quote:active:before { 
   -webkit-transform: rotate(20deg);
   transform: rotate(20deg);
 }
-
-.post-content blockquote:before { top: 27px; }
 .post-status-inner > .post-content p + blockquote { margin-top: -10px; }
 .post-status-header + .post-content blockquote { margin-top: 1.4em; }
 .post-content blockquote p { font-style: normal; }
-.post-content blockquote:before { font-family: 'Helvetica', san-serif; }
+.post-content blockquote:before {
+	font-family: sans-serif;
+	top: 30px;
+	left: 20px
+}
 
 
 
@@ -281,6 +281,68 @@ a.post-quote:active:before {
 .page-title {
 	border-bottom: 1px solid #eee;
 	margin-bottom: 0px;
+}
+
+/* 设置数学公式字体大小 */
+.katex { font-size: 1.0em; }
+
+/* 有序及无序列表样式修改 */
+.post-content p {
+	margin-top: 1.4em;
+	margin-bottom: 0em;
+	line-height: 170%;
+}
+.post-content li ul li:first-child,
+.post-content li ol li:first-child { margin-top: 0em; }
+.post-content blockquote p { margin-top: 0em; }
+.post-content p + blockquote { margin-top: 1.4em }
+.post-content ul,
+.post-content ol,
+.post-content li {
+	margin-left: 0.5em;
+	margin-bottom: 0px;
+}
+.post-content ul { list-style: disc; }
+.post-content ul ul ul { list-style: disc; }
+.post-content ul ul {
+	list-style: disc;
+	margin-left: 0.5em;
+}
+.post-content ol { list-style: decimal; }
+.post-content ol ol ol { list-style: decimal; }
+.post-content ol ol {
+	list-style: decimal;
+	margin-left: 0.5em;
+}
+
+.archive-container ul,
+.archive-container ol,
+.archive-container li {
+	margin-left: 1em;
+	margin-bottom: 1.4em;
+}
+
+/* n级标题样式修改 */
+.post-content h1 + p,
+.post-content h2 + p,
+.post-content h3 + p { margin-top: 0px; }
+.post-content h1 {
+	font-size: 2em;
+	padding-top: 0px;
+	margin: 60px 0 20px 0;
+	font-weight: 500;
+}
+.post-content h2 {
+	font-size: 1.75em;
+	margin: 60px 0 15px 0;
+	padding-top: 0px;
+	font-weight: 500;
+}
+.post-content h3 {
+	font-size: 1.25em;
+	margin: 30px 0 0 0;
+	padding-top: 0px;
+	font-weight: 700;
 }
 
 /* 添加文章目录 */
@@ -646,7 +708,7 @@ a.post-quote:active:before {
 	.archive-nav { padding: 60px 5%; }
 	.post-quote:before {
 		left: 5%;
-		top: 34px;
+		top: 39px;
 		font-size: 4.2em;	/* 700px时页边距变窄了，所以为了美观调小 */
 	}
 	.sidebar-inner {
@@ -678,6 +740,13 @@ a.post-quote:active:before {
 
 @media (max-width: 600px) {
 
+	.post-content h1 { font-size: 1.75em; }
+	.post-content h2 { font-size: 1.5em; }
+	.post-content h3 { font-size: 1.25em; }
+	.post-content h4 { font-size: 1em; }
+	.post-content h5 { font-size: 0.9em; }
+	.post-content h6 { font-size: 0.7em; }
+
 	.mobile-menu li { margin-top: 20px; }
 
 	.sidebar { padding: 20px 0; }
@@ -703,7 +772,7 @@ a.post-quote:active:before {
 	.post-status-header { margin-bottom: 10px; }
 	.featured-media + .post-content { margin-top: 25px; }
 	.post-quote { padding-left: 45px; }
-	.post-quote:before { top: 31px; }
+	.post-quote:before { top: 35px; }
 
 	/* “页码”边距 */
 	.page-title h4 {
@@ -729,14 +798,11 @@ a.post-quote:active:before {
 	}
 
 	/* 间距调整 */
-	.post-content p,
 	.post-content blockquote,
-	.post-content ul,
-	.post-content ol,
 	.post-content address,
 	.post-content dl,
-	.post-content li,
 	.post-content .wp-caption { margin-bottom: 1.2em; }
+	.post-content p { margin-top: 1.2em; }
 	.post-header { margin-bottom: 20px; }
 	.post-status-header { margin-bottom: 10px; }
 	.featured-media + .post-content { margin-top: 20px; }
@@ -745,7 +811,7 @@ a.post-quote:active:before {
 	.post-status-header + .post-content blockquote { margin-top: 1.2em; }
 	.post-quote { padding-left: 40px; }
 	.post-quote:before {
-		top: 29px;
+		top: 32px;
 		font-size: 3.8em;
 	}
 
