--- a/额外css.css
+++ b/额外css.css
@@ -198,7 +198,6 @@ a.post-quote:active:before {
   -webkit-transform: rotate(20deg);
   transform: rotate(20deg);
 }
-.post-status-inner > .post-content p + blockquote { margin-top: -10px; }
 .post-status-header + .post-content blockquote { margin-top: 1.4em; }
 .post-content blockquote p { font-style: normal; }
 .post-content blockquote:before {
@@ -287,6 +286,7 @@ a.post-quote:active:before {
 .katex { font-size: 1.0em; }
 
 /* 有序及无序列表样式修改 */
+.post-content > *:first-child { margin-top: 1.4em; }
 .post-content p {
 	margin-top: 1.4em;
 	margin-bottom: 0em;
@@ -295,7 +295,12 @@ a.post-quote:active:before {
 .post-content li ul li:first-child,
 .post-content li ol li:first-child { margin-top: 0em; }
 .post-content blockquote p { margin-top: 0em; }
-.post-content p + blockquote { margin-top: 1.4em }
+.post-content p + blockquote,
+.post-content p + table,
+.post-content table + table,
+.post-content p + pre { margin-top: 1.4em; }
+.post-content img { margin: 1.4em 0; }
+.full-width-gallery img { margin: 0; }
 .post-content ul,
 .post-content ol,
 .post-content li {
@@ -313,13 +318,6 @@ a.post-quote:active:before {
 .post-content ol ol {
 	list-style: decimal;
 	margin-left: 0.5em;
-}
-
-.archive-container ul,
-.archive-container ol,
-.archive-container li {
-	margin-left: 1em;
-	margin-bottom: 1.4em;
 }
 
 /* n级标题样式修改 */
@@ -343,6 +341,14 @@ a.post-quote:active:before {
 	margin: 30px 0 0 0;
 	padding-top: 0px;
 	font-weight: 700;
+}
+
+.archive-container h3 { margin: 1em 0em; }
+.archive-container ul,
+.archive-container ol,
+.archive-container li {
+	margin-left: 1em;
+	margin-bottom: 1.4em;
 }
 
 /* 添加文章目录 */
@@ -442,8 +448,6 @@ a.post-quote:active:before {
 	.featured-media + .post-content { margin-top: 30px; }
 	.post-content { margin-bottom: -10px; }
 	.post-content a.more-link { margin-top: 3px; }
-	.post-content table,
-	.post-content pre { margin-bottom: 25.2px; }
 
 	/* “页码”边距 */
 	.page-title { padding-bottom: 40px; }
@@ -515,8 +519,6 @@ a.post-quote:active:before {
 	.featured-media + .post-content { margin-top: 30px; }
 	.post-content { margin-bottom: -10px; }
 	.post-content a.more-link { margin-top: 3px; }
-	.post-content table,
-	.post-content pre { margin-bottom: 25.2px; }
 	.comments-subtitle {							/* 评论区边距 */
 		bottom: 37px;
 		right: 0;
@@ -766,8 +768,6 @@ a.post-quote:active:before {
 	.comment-respond { padding: 35px 5%; }
 
 	/* 微调间距 */
-	.post-content table,
-	.post-content pre { margin-bottom: 22.4px; }
 	.post-header { margin-bottom: 25px; }
 	.post-status-header { margin-bottom: 10px; }
 	.featured-media + .post-content { margin-top: 25px; }
@@ -802,7 +802,14 @@ a.post-quote:active:before {
 	.post-content address,
 	.post-content dl,
 	.post-content .wp-caption { margin-bottom: 1.2em; }
-	.post-content p { margin-top: 1.2em; }
+	.post-content p,
+	.post-content p + blockquote,
+	.post-content p + table,
+	.post-content table + table,
+	.post-content p + pre { margin-top: 1.2em; }
+	.post-content > *:first-child { margin-top: 1.2em; }
+	.post-content img { margin: 1.2em 0; }
+	.full-width-gallery img { margin: 0; }
 	.post-header { margin-bottom: 20px; }
 	.post-status-header { margin-bottom: 10px; }
 	.featured-media + .post-content { margin-top: 20px; }
@@ -814,7 +821,6 @@ a.post-quote:active:before {
 		top: 32px;
 		font-size: 3.8em;
 	}
-
 
 	/* “页码”边距 */
 	.page-title h4 {
@@ -841,6 +847,7 @@ a.post-quote:active:before {
 /* 针对除ios以外的其他移动设备 */ 
 @supports not (-webkit-overflow-scrolling: touch) {
 
+	.post-content a,
 	.comments-subtitle a,
 	a.post-quote,
 	.post-meta-toggle,
