--- a/额外css.css
+++ b/额外css.css
@@ -287,6 +287,7 @@ a.post-quote:active:before {
 
 /* 评论区 */
 .comment-actions { margin-top: 32px; }
+.bypostauthor > .comment .avatar { border: none; }
 
 /* 页标题 */
 .page-title {
