--- a/额外css.css
+++ b/额外css.css
@@ -322,7 +322,7 @@ a.post-quote:active:before {
 }
 .post-content h3 {
 	font-size: 1.25em;
-	margin: 30px 0 0 0;
+	margin: 30px 0 15px 0;
 	padding-top: 0px;
 	font-weight: 700;
 }
