--- a/额外css.css
+++ b/额外css.css
@@ -289,6 +289,7 @@ a.post-quote:active:before {
 .comment-actions { margin-top: 32px; }
 .bypostauthor > .comment .avatar { border: none; }
 .commentlist .children .children { margin-left: 0; }
+.comment-form-comment-subscribe { display: none; }
 
 /* 页标题 */
 .page-title {
